--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -1,13 +1,13 @@
 # Italian translation of ledgersmb debconf messages.
-# Copyright (C) 2012, ledgersmb package copyright holder
+# Copyright (C) 2018, ledgersmb package copyright holder
 # This file is distributed under the same license as the ledgersmb package.
-# Beatrice Torracca <beatricet@libero.it>, 2012.
+# Beatrice Torracca <beatricet@libero.it>, 2012, 2018.
 msgid ""
 msgstr ""
 "Project-Id-Version: ledgersmb\n"
 "Report-Msgid-Bugs-To: ledgersmb@packages.debian.org\n"
 "POT-Creation-Date: 2018-03-23 21:01-0400\n"
-"PO-Revision-Date: 2012-06-21 20:42+0200\n"
+"PO-Revision-Date: 2018-11-08 08:54+0200\n"
 "Last-Translator: Beatrice Torracca <beatricet@libero.it>\n"
 "Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
 "Language: it\n"
@@ -26,7 +26,6 @@ msgstr "Login dell'utente amministratore per il database:"
 #. Type: string
 #. Description
 #: ../templates:2001
-#, fuzzy
 #| msgid ""
 #| "Please enter the login of the LedgerSMB database administrative user. "
 #| "This login is needed for the administrative web user interface, typically "
@@ -38,7 +37,7 @@ msgid ""
 msgstr ""
 "Inserire il login dell'utente amministratore per il database di LedgerSMB. "
 "Questo login è necessario per l'interfaccia utente web per "
-"l'amministrazione, tipicamente su http://localhost/ledgersmb/setup.pl."
+"l'amministrazione, tipicamente su http://localhost:5762/setup.pl."
 
 #. Type: password
 #. Description
@@ -49,7 +48,6 @@ msgstr "Password dell'utente amministratore per il database:"
 #. Type: password
 #. Description
 #: ../templates:3001
-#, fuzzy
 #| msgid ""
 #| "Please enter the password of the LedgerSMB database administrative user. "
 #| "This password is needed for the administrative web user interface, "
@@ -61,13 +59,13 @@ msgid ""
 msgstr ""
 "Inserire la password dell'utente amministratore per il database di "
 "LedgerSMB. Questa password è necessaria per l'interfaccia utente web per "
-"l'amministrazione, tipicamente su http://localhost/ledgersmb/setup.pl."
+"l'amministrazione, tipicamente su http://localhost:5762/setup.pl."
 
 #. Type: select
 #. Description
 #: ../templates:4001
 msgid "Web Reverse Proxy to configure?"
-msgstr ""
+msgstr "Proxy web inverso da configurare?"
 
 #. Type: select
 #. Description
@@ -79,11 +77,15 @@ msgid ""
 "can leave the choice as None if it is not needed or if the web proxy will be "
 "set up remotely."
 msgstr ""
+"L'applicazione LedgerSMB ora in modo predefinito viene resa disponibile "
+"sulla porta 5762 e viene eseguita direttamente da Starman. Se è necessario "
+"un altro accesso può essere configurato un proxy inverso usando Apache, "
+"Nginx, Lighttpd o Varnish, oppure si può lasciare la scelta come \"None\" se "
+"non è necessario o se il proxy web verrà impostato in remoto."
 
 #. Type: select
 #. Description
 #: ../templates:4001
-#, fuzzy
 #| msgid ""
 #| "More general information about the initial configuration of the "
 #| "application can be found in /usr/share/doc/ledgersmb/README.Debian."
@@ -91,8 +93,8 @@ msgid ""
 "For more details, please see the Web Proxy section that can be found in the /"
 "usr/share/doc/ledgersmb/README.Debian file."
 msgstr ""
-"Informazioni più generali sulla configurazione iniziale dell'applicazione "
-"sono disponibili in /usr/share/doc/ledgersmb/README.Debian."
+"Per ulteriori dettagli vedere la sezione «Web Proxy» che può essere trovata "
+"nel file /usr/share/doc/ledgersmb/README.Debian."
 
 #, fuzzy
 #~| msgid "Configure LedgerSMB automatically?"
