--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ ledgersmb (1.6.6+ds-3) UNRELEASED; urgency=medium
     * Pending remaining updates for the debian/po/*.po files.
   * Updated the debconf debian/po/pl.po file.
   * Updated the debconf debian/po/sv.po file.
+  * Updated the debconf debian/po/it.po file. (Closes: #914460)
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 23 Nov 2018 12:40:11 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sun, 25 Nov 2018 02:11:40 -0500
 
 ledgersmb (1.6.6+ds-2) unstable; urgency=medium
 
