--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ ledgersmb (1.6.6+ds-3) UNRELEASED; urgency=medium
   * Updated the debconf debian/po/pl.po file.
   * Updated the debconf debian/po/sv.po file.
   * Updated the debconf debian/po/it.po file. (Closes: #914460)
+  * Updated the debconf debian/po/pt.po file. (Closes: #915262)
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 25 Nov 2018 02:11:40 -0500
+ -- Robert James Clay <jame@rocasa.us>  Thu, 06 Nov 2018 08:15:41 -0500
 
 ledgersmb (1.6.6+ds-2) unstable; urgency=medium
 
