--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,16 @@
 Changelog for 1.6 Series
 Released 2018-06-10
 
+Changelog for 1.6.7
+* Fix 'Save Groups' clearing all user permissions (Nick P)
+* Fix draft deletion failing after updating recon screen (Erik H, #3904)
+* Fix reconciliation failing to add transaction after approval (Erik H, #3909)
+* Improve unapproved transactions warning in reconciliation (Erik H)
+
+Nick P is Nick Prater
+Erik H is Erik Huelsmann
+
+
 Changelog for 1.6.6
 * Fix search for reconciliation report by amount (Nick P)
 * Fix adding budget gives error (Nick P, #3850)
@@ -124,7 +134,15 @@ Released 2016-12-24
 
 Changelog for 1.5.22
 * Upgrade Dojo to 1.10.10 (Erik H)
+* Fix failing update scripts applying menu reorganization (Erik H, #3855)
+* Fix template files containing object name instead of actual content (Nick P)
+* Fix voucher deletion throwing an error (Erik H, #3722)
+* Fix GL journal buttons displaying in random order (Erik H, #3860)
+* Fix aging report (typo in module name) (Erik H)
+* Fix draft deletion failing after updating recon screen (Erik H, #3904)
+* Fix reconciliation failing to add transaction after approval (Erik H, #3909)
 
+Nick P is Nick Prater
 Erik H is Erik Huelsmann
 
 
