--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,14 @@
-ledgersmb (1.6.6+ds-3) UNRELEASED; urgency=medium
+ledgersmb (1.6.7+ds-1~1) UNRELEASED; urgency=medium
 
   TODO:
     * Pending remaining updates for the debian/po/*.po files.
+  * New upstream release.
   * Updated the debconf debian/po/pl.po file.
   * Updated the debconf debian/po/sv.po file.
   * Updated the debconf debian/po/it.po file. (Closes: #914460)
   * Updated the debconf debian/po/pt.po file. (Closes: #915262)
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 06 Nov 2018 08:15:41 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sun, 16 Dec 2018 10:04:08 -0500
 
 ledgersmb (1.6.6+ds-2) unstable; urgency=medium
 
