--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.6.9+ds-1~1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Wed, 26 Dec 2018 12:51:52 -0500
+
 ledgersmb (1.6.8+ds-1) unstable; urgency=medium
 
   * New upstream release.
