--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-ledgersmb (1.6.9+ds-1~1) UNRELEASED; urgency=medium
+ledgersmb (1.6.9+ds-1) unstable; urgency=medium
 
   * New upstream release.
+  * Declare compliance with Debian Policy 4.3.0, no changes required.
+  * Resolve issue with trailing spaces in the debian/changelog file.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 26 Dec 2018 12:51:52 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 26 Dec 2018 20:45:30 -0500
 
 ledgersmb (1.6.8+ds-1) unstable; urgency=medium
 
@@ -385,7 +387,7 @@ ledgersmb (1.3.39-1) unstable; urgency=low
     - Add 20_BashPath.patch to resolve bash path issues in tools/ scripts.
     - Add 21_lsmb_13-fcgi-conf.patch for setting its directory paths.
   * Update packaging for installation of ledgersmb-httpd configuration for
-    Apache v2.2 and v2.4. (Closes: #725758) 
+    Apache v2.2 and v2.4. (Closes: #725758)
   * Changes to debian/ledgersmb.docs:
    - Add README.git to the installed documents list.
    - Add README.plack to the installed documents list.
@@ -484,7 +486,7 @@ ledgersmb (1.3.18-1) unstable; urgency=low
   * Add the application css directory to the debian/ledgersmb.examples file
     and remove it from the debian/ledgersmb.install file.
   * Add code in ledgersmb.postrm to remove /var/lib/ledgersmb/css during
-    a package purge.  (Like for /var/lib/ledgersmb/templates, which was 
+    a package purge.  (Like for /var/lib/ledgersmb/templates, which was
     actually added with 1.3.17-1.)
   * Removed the no longer needed references to libexcel-template-plus-perl from
     debian/control and debian/README.Debian.
@@ -530,7 +532,7 @@ ledgersmb (1.3.15-2) unstable; urgency=low
   * Rewrite LedgerSMB README.Debian, including database related information.
   * Correct debconf variable lsmb_debconf to debconf_install in debian/postinst.
   * Changes for debian/patches/*:
-    - Renumber 15_httpdconf.patch as 10_httpdconf.patch. 
+    - Renumber 15_httpdconf.patch as 10_httpdconf.patch.
     - Add 15_UI-setup-credentials.patch to set 'ledgersmb' as the default
       database superuser for setup.pl.
 
@@ -797,11 +799,11 @@ ledgersmb (1.2.19-1) unstable; urgency=low
 ledgersmb (1.2.18-1) unstable; urgency=low
 
   [ Robert James Clay ]
-  * Added index.html link to doc/ledgersmb/html_manual/LedgerSMB-manual.html 
+  * Added index.html link to doc/ledgersmb/html_manual/LedgerSMB-manual.html
   * Added HTML format section to ledgersmb.doc-base
 
   [ Elizabeth Krumbach ]
-  * New upstream release 
+  * New upstream release
 
  -- Elizabeth Krumbach <lyz@princessleia.com>  Mon, 06 Apr 2009 00:16:23 +0000
 
@@ -825,7 +827,7 @@ ledgersmb (1.2.16-1) unstable; urgency=low
 
 ledgersmb (1.2.15-2) unstable; urgency=low
 
-  * Added postgres-8.3 to depends and suggests 
+  * Added postgres-8.3 to depends and suggests
 
  -- Elizabeth Bevilacqua <lyz@princessleia.com>  Fri, 29 Aug 2008 02:19:03 +0000
 
@@ -837,7 +839,7 @@ ledgersmb (1.2.15-1) unstable; urgency=low
 
 ledgersmb (1.2.14-1) unstable; urgency=low
 
-  * New upstream release 
+  * New upstream release
 
  -- Elizabeth Bevilacqua <lyz@princessleia.com>  Fri, 22 Aug 2008 02:16:15 +0000
 
@@ -1018,4 +1020,3 @@ ledger-smb (1.1.99beta1-1) unstable; urgency=low
   * Initial release
 
  -- Seneca Cunningham <tetragon@ledgersmb.org>  Mon, 13 Nov 2006 15:29:53 -0500
-
