--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,35 @@
 Changelog for 1.6 Series
 Released 2018-06-10
 
+Changelog for 1.6.33
+* Follow-up (fix) to upgrades blocked by files attached to transactions (Erik H)
+
+Erik H is Erik Huelsmann
+
+
+Changelog for 1.6.32
+* Update welcome.html and README, removing FreeNode and updating Element (Erik H)
+* Fix double-quoting values in GL transaction 'notes' and 'description' (Erik H)
+* Fix GL transaction after file attachment showing up empty (Erik H)
+* Retain AR/AP account across 'Update' on invoices and transactions (Erik H)
+* Don't drop creation date on AR/AP transactions and invoices from 1.3 (Erik H)
+
+Erik H is Erik Huelsmann
+
+
+Changelog for 1.6.31
+* Improve upgrades in light of files attached to transactions (Erik H, #5405)
+
+Erik H is Erik Huelsmann
+
+
+Changelog for 1.6.30
+* Fix Number not updated by 'Save as New' on order and quote (Erik H, #5356)
+* Performance improvements through added database indexes (Erik H)
+
+Erik H is Erik Huelsmann
+
+
 Changelog for 1.6.29
 * Disable the broken-on-orders Schedule button on orders (Erik H, #5295)
 * Fix several LedgerSMB 1.3 migration issues (Erik H)
