--- a/locale/po/th_TH.po
+++ b/locale/po/th_TH.po
@@ -1,24 +1,20 @@
 #
-# Translators:
-# saeed soltani <saeedhakh2007@gmail.com>, 2018
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: LedgerSMB 1.6.33\n"
 "Report-Msgid-Bugs-To: devel@lists.ledgersmb.org\n"
 "POT-Creation-Date: 2021-06-03 18:26+0000\n"
-"Last-Translator: saeed soltani <saeedhakh2007@gmail.com>, 2018\n"
-"Language-Team: Persian (Iran) (https://www.transifex.com/ledgersmb/"
-"teams/58325/fa_IR/)\n"
-"Language: fa_IR\n"
+"Language-Team: Thai (Thailand) (https://www.transifex.com/ledgersmb/"
+"teams/58325/th_TH/)\n"
+"Language: th_TH\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: lib/LedgerSMB/Report/Invoices/Outstanding.pm:163
 msgid "# Invoices"
-msgstr "فاکتور"
+msgstr ""
 
 #: lib/LedgerSMB/Report/Assets/Net_Book_Value.pm:112
 msgid "% Dep."
