--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 ledgersmb (1.6.33+ds-1~1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Fix CVE-2021-3693
+  * Fix CVE-2021-3694
+  * Fix CVE-2021-3731
+  * Fix regression from CVE-2021-3693
+
 
  -- Erik Huelsmann <ehuels@gmail.com>  Wed, 01 Sep 2021 20:44:00 +0200
 
