--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.6.33+ds-2) UNRELEASED; urgency=medium
+
+  * Backport PostgreSQL 14 compatibility
+
+ -- Erik Hulsmann <ehuels@gmail.com>  Sat, 09 Apr 2022 14:01:33 +0200
+
 ledgersmb (1.6.33+ds-1) unstable; urgency=medium
 
   [Erik Huelsmann]
