--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.6.33+ds-2) UNRELEASED; urgency=medium
+ledgersmb (1.6.33+ds-2) unstable; urgency=medium
 
   * Backport PostgreSQL 14 compatibility
 
- -- Erik Hulsmann <ehuels@gmail.com>  Sat, 09 Apr 2022 14:01:33 +0200
+ -- Erik Hulsmann <ehuels@gmail.com>  Sat, 09 Apr 2022 14:36:41 +0200
 
 ledgersmb (1.6.33+ds-1) unstable; urgency=medium
 
