--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ledgersmb (1.6.33+ds-2.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * No source change upload to rebuild with debhelper 13.10.
+
+ -- Michael Biebl <biebl@debian.org>  Sat, 15 Oct 2022 12:14:27 +0200
+
 ledgersmb (1.6.33+ds-2) unstable; urgency=medium
 
   * Backport PostgreSQL 14 compatibility
