--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 ledgersmb (1.6.33+ds-3) UNRELEASED; urgency=medium
 
   * Fix lintian errors and warnings
+  * Declare standards version 4.6.1
+  * Adjust debian/control to comply with policy 4.6.1 requirements
 
  -- Erik Huelsmann <ehuels@gmail.com>  Wed, 16 Nov 2022 20:57:37 +0100
 
